Add springdoc-openapi v2.0.2 (https://springdoc.org/v2/)